--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -1,14 +1,18 @@
+  .div1{
+
+  }
+
   button {
-    margin: 20px;
+    margin: 25px;
   }
   .custom-btn {
-    width: 130px;
+    width: 200px;
     height: 60px;
     color: #fff;
-    border-radius: 5px;
-    padding: 10px 25px;
+    border-radius: 10px;
+    padding: 20px 35px;
     font-family: 'Lato', sans-serif;
-    font-weight: 500;
+    font-weight: 550;
     background: transparent;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -26,8 +30,8 @@
     bottom: 20px;
     border:none;
     box-shadow: none;
-    width: 130px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     line-height: 42px;
     -webkit-perspective: 230px;
     perspective: 230px;
@@ -37,8 +41,8 @@
   background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
     display: block;
     position: absolute;
-    width: 130px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
      7px 7px 20px 0px rgba(0,0,0,.1),
      4px 4px 5px 0px rgba(0,0,0,.1);
@@ -97,8 +101,8 @@
     bottom: 20px;
     border:none;
     box-shadow: none;
-    width: 130px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     line-height: 42px;
     -webkit-perspective: 230px;
     perspective: 230px;
@@ -108,8 +112,8 @@
   background: linear-gradient(0deg, rgba(17, 148, 12,1) 0%, rgb(12, 126, 8) 100%);
     display: block;
     position: absolute;
-    width: 130px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     box-shadow:inset 2px 2px 2px 0px rgba(41, 112, 94, 0.5),
      7px 7px 20px 0px rgba(0,0,0,.1),
      4px 4px 5px 0px rgba(0,0,0,.1);
